--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daniel Selbach | Especialista em Cibersegurança & Infraestrutura de Redes</title>
   <meta name="description" content="Portfólio profissional de Daniel Selbach - +12 anos em TI & Telecom | Red Team, Penetration Testing, Redes e Cloud">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://danielselbachoficial.github.io/portfolio/">
+  <meta property="og:title" content="Daniel Selbach | Especialista em Cibersegurança">
+  <meta property="og:description" content="+12 anos em TI & Telecom | Red Team • Penetration Testing • Redes • Cloud">
+  <meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/6195/6195699.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://danielselbachoficial.github.io/portfolio/">
+  <meta property="twitter:title" content="Daniel Selbach | Especialista em Cibersegurança">
+  <meta property="twitter:description" content="+12 anos em TI & Telecom | Red Team • Penetration Testing • Redes • Cloud">
+  <meta property="twitter:image" content="https://cdn-icons-png.flaticon.com/512/6195/6195699.png">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/6195/6195699.png">
+  
+  <!-- CSS -->
   <link rel="stylesheet" href="styles.css">
+  
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  
   <!-- Font Awesome para ícones -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -324,19 +345,19 @@
         <div class="contato-section">
           <h3 class="contato-section-title">📱 Minhas Redes Sociais</h3>
           <div class="social-links">
-            <a href="https://www.linkedin.com/in/danielselbachoficial/" target="_blank" class="social-link linkedin">
+            <a href="https://www.linkedin.com/in/danielselbachoficial/" target="_blank" rel="noopener noreferrer" class="social-link linkedin">
               <i class="fab fa-linkedin"></i>
               <span>LinkedIn</span>
             </a>
-            <a href="https://github.com/danielselbachoficial" target="_blank" class="social-link github">
+            <a href="https://github.com/danielselbachoficial" target="_blank" rel="noopener noreferrer" class="social-link github">
               <i class="fab fa-github"></i>
               <span>GitHub</span>
             </a>
-            <a href="https://www.youtube.com/@danielselbachoficial" target="_blank" class="social-link youtube">
+            <a href="https://www.youtube.com/@danielselbachoficial" target="_blank" rel="noopener noreferrer" class="social-link youtube">
               <i class="fab fa-youtube"></i>
               <span>YouTube</span>
             </a>
-            <a href="https://www.instagram.com/danielselbach.com.br" target="_blank" class="social-link instagram">
+            <a href="https://www.instagram.com/danielselbach.com.br" target="_blank" rel="noopener noreferrer" class="social-link instagram">
               <i class="fab fa-instagram"></i>
               <span>Instagram</span>
             </a>
@@ -352,11 +373,11 @@
           <h3 class="contato-section-title">🏢 Afsim Tech</h3>
           <p class="company-description">Minha empresa especializada em soluções de TI e Cibersegurança</p>
           <div class="social-links">
-            <a href="https://afsimtech.com/" target="_blank" class="social-link website">
+            <a href="https://afsimtech.com/" target="_blank" rel="noopener noreferrer" class="social-link website">
               <i class="fas fa-globe"></i>
               <span>Site Oficial</span>
             </a>
-            <a href="https://www.instagram.com/afsimtech" target="_blank" class="social-link instagram">
+            <a href="https://www.instagram.com/afsimtech" target="_blank" rel="noopener noreferrer" class="social-link instagram">
               <i class="fab fa-instagram"></i>
               <span>Instagram</span>
             </a>
