--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@
         <div class="skill-category">
           <h3>💻 Sistemas Operacionais</h3>
           <ul>
-            <li>Linux (Kali, Ubuntu, CentOS)</li>
+            <li>Linux (Kali, Ubuntu, Debian,CentOS)</li>
             <li>Windows Server</li>
             <li>RouterOS, FortiOS</li>
-            <li>Network OS</li>
+            <li>Edge Protect</li>
           </ul>
         </div>
       </div>
