--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
               <i class="fab fa-youtube" aria-hidden="true"></i>
               <span>YouTube</span>
             </a>
-            <a href="https://www.instagram.com/danielselbach.com.br" target="_blank" rel="noopener noreferrer" class="social-link instagram">
+            <a href="https://www.instagram.com/danielselbach.cyber" target="_blank" rel="noopener noreferrer" class="social-link instagram">
               <i class="fab fa-instagram" aria-hidden="true"></i>
               <span>Instagram</span>
             </a>
