--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
           <h3>🌐 Redes &amp; Infraestrutura</h3>
           <ul>
             <li>Routing &amp; Switching</li>
-            <li>TCP/IP Stack</li>
+            <li>TCP/IP</li>
             <li>VPN &amp; Tunneling</li>
             <li>Network Design</li>
             <li>VLAN &amp; QoS</li>
@@ -357,7 +357,7 @@
               <i class="fab fa-github" aria-hidden="true"></i>
               <span>GitHub</span>
             </a>
-            <a href="https://www.youtube.com/@danielselbachoficial" target="_blank" rel="noopener noreferrer" class="social-link youtube">
+            <a href="https://www.youtube.com/@DSInfraEmAcao" target="_blank" rel="noopener noreferrer" class="social-link youtube">
               <i class="fab fa-youtube" aria-hidden="true"></i>
               <span>YouTube</span>
             </a>
